release: prepare ToppleCat 0.0.7